test/libsolidity/syntaxTests/parsing/single_return_param_trailing_comma.sol
contract test {
	function() returns (uint a,) {}
}
// ----
// ParserError 7591: (43-44): Unexpected trailing comma in parameter list.
